syntax = "proto3";

import "common.proto";

option java_package = "com.alibaba.maxgraph.proto.v2";
option java_multiple_files = true;

service StoreWrite {
    rpc writeStore(WriteStoreRequest) returns(WriteStoreResponse);
}

message WriteStoreRequest {
    StoreDataBatchPb batch = 1;
}

message PartitionToBatchPb {
    map<int32, OperationBatchPb> partitionToBatch = 1;
}

message StoreDataBatchPb {
    string requestId = 1;
    int32 queueId = 2;
    int64 snapshotId = 3;
    int64 offset = 4;
    repeated PartitionToBatchPb dataBatch = 5;
}

message WriteStoreResponse {
    bool success = 1;
}
